managed to connect to azure

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,21 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-V2MQB1D\\SQLEXPRESS;Initial Catalog=AgriDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //Local DB   
+    //"DefaultConnection": "Data Source=DESKTOP-V2MQB1D\\SQLEXPRESS;Initial Catalog=AgriDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
+    //Azure DB
+    "DefaultConnection": "Server=tcp:azureserver154miguel.database.windows.net,1433;Initial Catalog=AgriDB_1;Persist Security Info=False;User ID=ST10025374;Password=MCD15ajt@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CloudinarySettings": {
     "CloudName": "dw6webkve",
     "ApiKey": "518326792633956",
     "ApiSecret": "j-b6_p_oFQd5Cq-NR7PRc9rroy0"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
